feat: Add IsPublic to JellyfinClient.create()
This allows for making playlists specific to the current user, rather than shared with all logged in users (requires Jellyfin Server 10.9.0 or higher)

--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -1379,6 +1379,16 @@
         }
       }
     },
+    "playlist.new.public" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Shared with Instance"
+          }
+        }
+      }
+    },
     "playlist.remove" : {
       "localizations" : {
         "de" : {
