--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -1491,6 +1491,16 @@
         }
       }
     },
+    "playlist.new.public" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Shared with Instance"
+          }
+        }
+      }
+    },
     "playlist.remove" : {
       "localizations" : {
         "de" : {
