--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -1493,6 +1493,12 @@
     },
     "playlist.new.public" : {
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Öffentlich"
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
