--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -952,22 +952,22 @@
         }
       }
     },
-    "login.quickconnect.description" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Enter this code on a supported Jellyfin client to login on this client without needing to enter your credentials. This screen will proceed automatically upon entering the code. [Learn more](https://jellyfin.org/docs/general/server/quick-connect/#using-quick-connect)"
-          }
-        }
-      }
-    },
     "login.quickconnect.error" : {
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Something went wrong during Quick Connect. Please try again."
+          }
+        }
+      }
+    },
+    "login.quickconnect.link" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Learn more"
           }
         }
       }
@@ -1031,7 +1031,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Waiting for login..."
+            "value" : "Waiting for authorization..."
           }
         }
       }
