--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -931,6 +931,132 @@
         }
       }
     },
+    "login.quickconnect.code.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Your Quick Connect code:"
+          }
+        }
+      }
+    },
+    "login.quickconnect.description" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Requires Jellyfin 10.9+"
+          }
+        }
+      }
+    },
+    "login.quickconnect.error" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Something went wrong during Quick Connect. Please try again."
+          }
+        }
+      }
+    },
+    "login.quickconnect.hint" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Select the code below to copy"
+          }
+        }
+      }
+    },
+    "login.quickconnect.link" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Learn more"
+          }
+        }
+      }
+    },
+    "login.quickconnect.preparing" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Preparing Quick Connect"
+          }
+        }
+      }
+    },
+    "login.quickconnect.success" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Logged In! Please wait a moment…"
+          }
+        }
+      }
+    },
+    "login.quickconnect.title" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Quick Connect"
+          }
+        }
+      }
+    },
+    "login.quickconnect.unavailable.description" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Requires Jellyfin 10.9+"
+          }
+        }
+      }
+    },
+    "login.quickconnect.unavailable.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Quick Connect Unavailable"
+          }
+        }
+      }
+    },
+    "login.quickconnect.waiting" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Waiting for authorization..."
+          }
+        }
+      }
+    },
+    "login.quickconnect.welcome.button.text" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Successfully logged in. Welcome to AmpFin."
+          }
+        }
+      }
+    },
     "login.server" : {
       "localizations" : {
         "de" : {
